--- a/application/package.json
+++ b/application/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "pinia": "2.1.7",
     "vue": "^3.3.11",
-    "vue-axios": "^3.5.2",
-    "pinia": "2.1.7"
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
