--- a/infrastructure/nginx-nodejs/Makefile
+++ b/infrastructure/nginx-nodejs/Makefile
@@ -10,7 +10,7 @@ C_END='\033[0m'
 
 include ../../.env
 
-DOCKER_PROJ="$(PROJECT_NAME) - FRONTEND VUE 3"
+DOCKER_PROJ="$(PROJECT_NAME) - BACKOFFICE VUE 3"
 DOCKER_ABBR=$(PROJECT_ABBR)
 DOCKER_HOST=$(PROJECT_HOST)
 DOCKER_IMGK=$(FRONTEND_IMGK)
